# an5Client

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  tsconfig.json
dotnet/: MssqlConfig.cs  MssqlDbContext.cs  Order.cs  User.cs  an5Config.cs  an5DbContext.cs
python/: an5_metadata.py
test/: smoke.py
typescript/: Order.ts  User.ts  an5Metadata.js  an5Metadata.ts  base.js  base.ts  index.js  index.ts
